--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -39,6 +39,27 @@ TopMonks - Software development partner for your business
   </div>
 </section>
 
+<section class="cooperation">
+  <div class="mdc-layout-grid">
+    <div class="mdc-layout-grid__inner tm-layout-wrapper">
+      <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <a href="https://www.erstegroupit.com/en/home">
+          <img src="https://res.cloudinary.com/topmonks/image/upload/v1551977559/loga/erste_logo.png" alt="[logo] Erste Group">
+        </a>
+        <a href="https://www.pricefx.eu/site/">
+          <img src="https://res.cloudinary.com/topmonks/image/upload/v1551977559/loga/pfx_logo.png" alt="[logo] Pricef(x)">
+        </a>
+        <a href="https://zonky.cz/">
+          <img src="https://res.cloudinary.com/topmonks/image/upload/v1551977559/loga/zonky_logo.png" alt="[logo] Zonky">
+        </a>
+        <a href="https://www.adler.info/CZ/cs/Home/">
+          <img  src="https://res.cloudinary.com/topmonks/image/upload/v1551977559/loga/adler_logo.png" alt="[logo] Adler">
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section id="how-we-work" class="how-we-work">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
@@ -67,41 +88,6 @@ TopMonks - Software development partner for your business
   </div>
 </section>
 
-<section class="cooperation">
-  <div class="tm-bgnd-wrapper">
-    <div class="mdc-layout-grid">
-      <div class="mdc-layout-grid__inner tm-layout-wrapper">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>You will love working with us</h2>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet">
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-8-desktop">
-          <p class="box box--mobile-only">Our long-standing experience has resulted in deep, broad knowledge of the B2B world and start-up scene,
-            and gives us the ability to apply various technology solutions, whether they are old or new.</p>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet">
-        </div>
-        <div
-          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet">
-          <p class="box">We will bring start-up playfulness and a fresh point of view to your project.</p>
-          <p class="box box--purple">We respect the processes. Your company, your rules.</p>
-          <p class="box">We are open and fair. We keep our promises.</p>
-          <p class="box box--purple">We keep educating ourselves, you, and your children.</p>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet tm-layout-grid__cell--span-0-desktop">
-        </div>
-        <div
-          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet">
-          <p class="box">We will guide you through and help you understand the world of IT.</p>
-          <p class="box box--purple">We will help you stop worrying.</p>
-          <p class="box">We can anticipate and minimize the risks associated with technical IT solutions.</p>
-          <p class="box box--purple">We think in the context of your business. With our help, your product will make sense to your end users.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
 <section class="product">
   <div class="mdc-layout-grid steps tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
