Text updates to hack facebook blockchain / krypto ad banning

--- a/monkstage.topmonks.com/src/html/index.html
+++ b/monkstage.topmonks.com/src/html/index.html
@@ -2,7 +2,7 @@
 {% from 'macros/helpers.html' import speakerImage %}
 
 {% block title %}
-#monkstage Blockchain Edition | TopMonks
+#monkstage Blokčejn Edition | TopMonks
 {% endblock %}
 
 {% block head %}
@@ -11,7 +11,7 @@
 <link rel="canonical" href="https://monkstage.topmonks.com/">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@topmonks">
-<meta name="twitter:title" property="og:title" content="#monkstage Blockchain Edition | TopMonks">
+<meta name="twitter:title" property="og:title" content="#monkstage Blokčejn Edition | TopMonks">
 <meta name="twitter:image" property="og:image" content="https://monkstage.topmonks.com/og-image.png">
 <meta property="og:type" content="event">
 <meta property="og:url" content="https://monkstage.topmonks.com/">
@@ -23,10 +23,10 @@
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h1>#monkstage <span class="tm-text__h1-subtitle">Blockchain Edition</span></h1>
+        <h1>#monkstage <span class="tm-text__h1-subtitle">Blokčejn Edition</span></h1>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
-        <p>Odvětví kryptoaktiv vzniklo teprve před deseti lety. Od té doby jsme v tomto oboru opakovaně zažili vlnu nadšení a deprese. Pod nánosem mýtů o splasklé bublině kolem kryptoměn roste nový ekosystém, který má své dominantní hráče, hrající dlouhodobou hru. Na <a href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webtext">#monkstage</a> uvítáme hned tři zakladatele úspěšných českých startupů z tohoto odvětví.</p>
+        <p>Odvětví krytpoaktiv vzniklo teprve před deseti lety. Od té doby jsme v tomto oboru opakovaně zažili vlnu nadšení a deprese. Pod nánosem mýtů o splasklé bublině kolem krytpoměn roste nový ekosystém, který má své dominantní hráče, hrající dlouhodobou hru. Na <a href="http://bit.ly/blokcejn-edition">#monkstage</a> uvítáme hned tři zakladatele úspěšných českých startupů z tohoto odvětví.</p>
       </div>
     </div>
     <div class="mdc-layout-grid__inner tm-speakers">
@@ -54,7 +54,7 @@
           <div>
             Radim Kozub
             <span class="tm-text--subtext tm-layout--display-block">
-                Blockchain Legal
+                Blokčejn Legal
               </span>
           </div>
         </div>
@@ -73,7 +73,7 @@
             <div class="tm-strip__info">
               <span class="tm-strip__info_figure">390</span>
               <span class="tm-layout--flex-align-start tm-layout--margin-right">Kč</span>
-              <a href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webheader"
+              <a href="http://bit.ly/blokcejn-edition"
                  class="tm-btn tm-btn--inverse ga-track"
                  data-label="Header">koupit vstupenky</a>
             </div>
@@ -249,7 +249,7 @@
           <div class="tm-strip__info">
             <span class="tm-strip__info_figure">390</span>
             <span class="tm-layout--flex-align-start tm-layout--margin-right">Kč</span>
-            <a href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webfooter"
+            <a href="http://bit.ly/blokcejn-edition"
                class="tm-btn tm-btn--inverse ga-track"
                data-label="Footer">koupit vstupenky</a>
           </div>
