--- a/monkstage.topmonks.com/src/html/shared/header.html
+++ b/monkstage.topmonks.com/src/html/shared/header.html
@@ -48,7 +48,7 @@
             <li><a href="#kontakty">kontakty</a></li>
             <li>
               <a class="tm-btn ga-track"
-                 href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webmenu"
+                 href="http://bit.ly/blokcejn-edition"
                  data-label="Menu">koupit vstupenky</a>
             </li>
           </ul>
