--- a/www.xduediligence.com/src/html/index.html
+++ b/www.xduediligence.com/src/html/index.html
@@ -378,7 +378,7 @@
             </div>
             <div class="team-desc">
               <h4>Jirka Penzes</h4>
-              <span>Founder</span>
+              <span>CTO</span>
             </div>
           </div>
         </div>
@@ -389,7 +389,7 @@
             </div>
             <div class=" team-desc">
               <h4>Linh Nguyen</h4>
-              <span>Founder</span>
+              <span>CEO</span>
             </div>
           </div>
         </div>
