--- a/www.topmonks.com/src/html/v2/index.html
+++ b/www.topmonks.com/src/html/v2/index.html
@@ -137,7 +137,7 @@ TopMonks - Software development partner for your business
 {% set caseStudiesData = { title : 'Case Studies', subTitle : 'We have learned something from every collaboration with our clients.'} %}
 {% include 'components/case-studies/index.html' %}
 
-<section class="customers">
+<section class="testimonials">
   <div class="tm-bgnd-wrapper">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
