--- a/www.topmonks.cz/src/html/v2/index.html
+++ b/www.topmonks.cz/src/html/v2/index.html
@@ -442,7 +442,7 @@ TopMonks - Software development partner for your business
 {% include 'components/case-studies/index.html' %}
 
 
-<section class="customers">
+<section class="testimonials">
   <div class="tm-bgnd-wrapper">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
