--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -158,7 +158,7 @@
 {% set caseStudiesData = { title : 'Jak pracujeme', subTitle : 'Vždy se naučíme něco nového ze spolupráce s našimi klienty.'} %}
 {% include 'components/case-studies/index.html' %}
 
-<section class="customers">
+<section class="testimonials">
   <div class="tm-bgnd-wrapper">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner tm-layout-wrapper">
