Update design, add counter

--- a/www.xduediligence.com/src/html/index.html
+++ b/www.xduediligence.com/src/html/index.html
@@ -95,6 +95,41 @@
     </div>
   </header>
 
+<section class="projects-section mt-5">
+   <div class="container">
+    <!--<div class="row mt-5">
+     <div class="col text-center">
+    <h2>Projects in numbers</h2>
+  
+    </div>
+  </div>-->
+    <div class="row text-center mt-5">
+          <div class="col">
+          <div class="counter">
+      <h2 class="timer count-title count-number" data-to="14415" data-speed="1500"></h2>
+       <p class="count-text ">Users</p>
+    </div>
+          </div>
+              <div class="col">
+               <div class="counter">
+      <h2 class="timer count-title count-number" data-to="387" data-speed="1500"></h2>
+      <p class="count-text ">Questionnaires</p>
+    </div>
+              </div>
+              <div class="col">
+                  <div class="counter">
+      <h2 class="timer count-title count-number" data-to="80" data-speed="1500"></h2>
+      <p class="count-text ">Consultations and workshops</p>
+    </div></div>
+              <div class="col">
+              <div class="counter">
+      <h2 class="timer count-title count-number" data-to="127" data-speed="1500"></h2>
+      <p class="count-text ">Satisfied customers</p>
+    </div>
+              </div>
+         </div>
+</section>
+
   <section id="claime">
     <div class="container">
       <div class="row justify-content-center">
@@ -102,6 +137,7 @@
           <h2 class="mt-0">Agile organisation<br> doesn't look like this</h2>
         </div>
       </div>
+    </div>
     </div>
   </section>
 
@@ -129,7 +165,7 @@
     </div>
   </section>
 
-  <section id="claime">
+  <section id="claime2">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
@@ -140,7 +176,7 @@
   </section>
 
   <!-- Projects Section -->
-  <section id="projects" class="projects-section">
+  <section id="projects2" class="projects-section">
     <div class="container">
 
       <!-- Project Two Row -->
@@ -171,7 +207,6 @@
     </div>
 
   </section>
-
 
 
   <!--<section id="about" class="">
