--- a/www.xduediligence.com/src/html/index.html
+++ b/www.xduediligence.com/src/html/index.html
@@ -103,7 +103,7 @@
   
     </div>
   </div>-->
-    <div class="row text-center mt-5">
+    <div class="row text-center numbers mt-5">
           <div class="col">
           <div class="counter">
       <h2 class="timer count-title count-number" data-to="14415" data-speed="2000"></h2>
@@ -124,7 +124,7 @@
               <div class="col">
               <div class="counter">
       <h2 class="timer count-title count-number" data-to="127" data-speed="2000"></h2>
-      <p class="count-text ">Satisfied customers</p>
+      <p class="count-text ">Satisfied <br>customers</p>
     </div>
               </div>
          </div>
