--- a/www.xduediligence.com/src/html/index.html
+++ b/www.xduediligence.com/src/html/index.html
@@ -97,34 +97,28 @@
 
 <section class="projects-section mt-5">
    <div class="container">
-    <!--<div class="row mt-5">
-     <div class="col text-center">
-    <h2>Projects in numbers</h2>
-  
-    </div>
-  </div>-->
     <div class="row text-center numbers mt-5">
-          <div class="col">
+          <div class="col-lg-3">
           <div class="counter">
       <h2 class="timer count-title count-number" data-to="14415" data-speed="2000"></h2>
        <p class="count-text ">Users</p>
     </div>
           </div>
-              <div class="col">
+              <div class="col-lg-3">
                <div class="counter">
       <h2 class="timer count-title count-number" data-to="387" data-speed="2000"></h2>
       <p class="count-text ">Questionnaires</p>
     </div>
               </div>
-              <div class="col">
+              <div class="col-lg-3">
                   <div class="counter">
       <h2 class="timer count-title count-number" data-to="80" data-speed="2000"></h2>
       <p class="count-text ">Consultations and workshops</p>
     </div></div>
-              <div class="col">
+              <div class="col-lg-3">
               <div class="counter">
       <h2 class="timer count-title count-number" data-to="127" data-speed="2000"></h2>
-      <p class="count-text ">Satisfied <br>customers</p>
+      <p class="count-text ">Satisfied customers</p>
     </div>
               </div>
          </div>
