--- a/www.xduediligence.com/src/html/index.html
+++ b/www.xduediligence.com/src/html/index.html
@@ -455,7 +455,7 @@
               <a class="js-scroll-trigger" href="#form">Contact</a>
             </li>
           </ul>
-          <p class="text-muted small mb-4 mb-lg-0">xDueDiligence 2019.</p>
+          <p class="text-muted small mb-4 mb-lg-0">xDueDiligence 2019</p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
