Update mobile css

--- a/www.xduediligence.com/src/html/index.html
+++ b/www.xduediligence.com/src/html/index.html
@@ -71,7 +71,9 @@
         <div class="col-lg-5 my-auto">
           <div class="header-content mx-auto">
             <h1 class="mb-5"> Team management, analyzed</h1>
+            <div class="button-container">
             <a href="#claime" class="btn btn-primary btn-xl js-scroll-trigger">Learn more</a>
+            </div>
             <!--<a href="#about" class="btn btn-primary secondary btn-xl js-scroll-trigger">Watch video</a>-->
           </div>
         </div>
