Reverting text updates for FB ads hacks, disabling link to eventbrite event

--- a/monkstage.topmonks.com/src/html/shared/header.html
+++ b/monkstage.topmonks.com/src/html/shared/header.html
@@ -47,9 +47,10 @@
             <li><a href="#o-akci">o akci</a></li>
             <li><a href="#kontakty">kontakty</a></li>
             <li>
-              <a class="tm-btn ga-track"
-                 href="http://bit.ly/blokcejn-edition"
-                 data-label="Menu">koupit vstupenky</a>
+              <span class="tm-btn tm-btn--disabled">koupit vstupenky</span>
+              <!--<a class="tm-btn ga-track"-->
+                 <!--href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webmenu"-->
+                 <!--data-label="Menu">koupit vstupenky</a>-->
             </li>
           </ul>
         </nav>
