Removing links to deleted eventbrite event

--- a/monkstage.topmonks.com/src/html/shared/header.html
+++ b/monkstage.topmonks.com/src/html/shared/header.html
@@ -49,7 +49,7 @@
             <li>
               <span class="tm-btn tm-btn--disabled">koupit vstupenky</span>
               <!--<a class="tm-btn ga-track"-->
-                 <!--href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webmenu"-->
+                 <!--href=""-->
                  <!--data-label="Menu">koupit vstupenky</a>-->
             </li>
           </ul>
