--- a/monkstage.topmonks.com/src/html/index.html
+++ b/monkstage.topmonks.com/src/html/index.html
@@ -73,7 +73,7 @@
             <div class="tm-strip__info">
               <span class="tm-strip__info_figure">390</span>
               <span class="tm-layout--flex-align-start tm-layout--margin-right">Kč</span>
-              <a href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webheader"
+              <a href=""
                  class="tm-btn tm-btn--inverse ga-track"
                  data-label="Header">koupit vstupenky</a>
             </div>
