Home page jumbotron background image updated

--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -25,38 +25,42 @@ TopMonks - Software development partner for your business
 <style>
   @media screen and (max-width: 479px) {
     body {
-      background: url("https://res.cloudinary.com/topmonks/image/upload/v1550565219/topmonks.com/HP_top-bgnd.png") right top -1px no-repeat;
-      background-size: 50% auto;
+      background: url("https://res.cloudinary.com/topmonks/image/upload/w_603,dpr_auto,q_auto,f_auto/v1553097490/topmonks.com/bgnd_header_mobile.png")
+      no-repeat right calc(50% - 145px) top 50px;
+      background-size: 603px auto;
       overflow-x: hidden;
     }
   }
-  @media screen and (max-width: 479px) and (-webkit-min-device-pixel-ratio: 2),
-      screen and (max-width: 479px) and (min--moz-device-pixel-ratio: 2),
-      screen and (max-width: 479px) and (-o-min-device-pixel-ratio: 2/1),
-      screen and (max-width: 479px) and (min-device-pixel-ratio: 2),
-      screen and (max-width: 479px) and (min-resolution: 192dpi),
-      screen and (max-width: 479px) and (min-resolution: 2dppx) {
+
+  @media screen and (max-width: 479px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 479px) and (min--moz-device-pixel-ratio: 2), screen and (max-width: 479px) and (-o-min-device-pixel-ratio: 2/1), screen and (max-width: 479px) and (min-device-pixel-ratio: 2), screen and (max-width: 479px) and (min-resolution: 192dpi), screen and (max-width: 479px) and (min-resolution: 2dppx) {
     body {
-      background-image: url("https://res.cloudinary.com/topmonks/image/upload/v1550565219/topmonks.com/HP_top-bgnd.png");
+      background: url("https://res.cloudinary.com/topmonks/image/upload/w_603,dpr_2,q_auto,f_auto/v1553097490/topmonks.com/bgnd_header_mobile.png")
+      no-repeat right calc(50% - 145px) top 50px;
+      background-size: 603px auto;
+      overflow-x: hidden;
     }
   }
   @media screen and (min-width: 480px) {
     body {
-      background: url("https://res.cloudinary.com/topmonks/image/upload/v1550565219/topmonks.com/HP_top-bgnd.png") right top -1px no-repeat;
-      background-size: 50% auto;
+      background: url("https://res.cloudinary.com/topmonks/image/upload/w_919,dpr_auto,q_auto,f_auto/v1553096602/topmonks.com/bgnd_header.png")
+      no-repeat right calc(50% - 390px) top 68px;
+      background-size: 919px auto;
       overflow-x: hidden;
     }
   }
-  @media screen and (min-width: 480px) and (min-device-pixel-ratio: 2),
-      screen and (min-width: 480px) and (min-resolution: 192dpi),
-      screen and (min-width: 480px) and (min-resolution: 2dppx) {
+
+  @media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
     body {
-      background-image: url("https://res.cloudinary.com/topmonks/image/upload/v1550565219/topmonks.com/HP_top-bgnd.png");
+      background: url("https://res.cloudinary.com/topmonks/image/upload/w_919,dpr_2,q_auto,f_auto/v1553096602/topmonks.com/bgnd_header.png")
+      no-repeat right calc(50% - 390px) top 68px;
+      background-size: 919px auto;
+      overflow-x: hidden;
     }
   }
-  @media screen and (min-width: 600px) and (max-width: 839px) {
+
+  @media screen and (min-width: 480px) and (max-width: 839px) {
     body {
-      background-position: right top;
+      background-position: right calc(50% - 460px) top 50px;
     }
   }
 </style>
