TM HP - pozice hlavního nadpisu

--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -73,7 +73,7 @@ TopMonks - Software development partner for your business
 <section class="main-info jumbotron">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-table mdc-layout-grid__cell--span-5-desktop">
         <h2 class="jumbotron__title">From your idea to <br>an effective solution</h2>
         <div class="box box--lead box--mobile-only">
           <p>We are building companies, integrating infrastructure, developing apps and
@@ -81,7 +81,7 @@ TopMonks - Software development partner for your business
           <a class="action-button jumbotron__cta" href="#how-we-work">MORE ABOUT US</a>
         </div>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-table mdc-layout-grid__cell--span-7-desktop">
       </div>
     </div>
   </div>
