--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -70,7 +70,7 @@
 <section class="main-info jumbotron">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-table mdc-layout-grid__cell--span-5-desktop">
         <h2 class="jumbotron__title">Od Vašeho nápadu <br>k efektivnímu řešení</h2>
         <div class="box box--lead box--mobile-only">
           <p>Budujeme firmy, integrujeme infrastrukturu, vyvíjíme aplikace a testujeme
@@ -78,7 +78,7 @@
           <a class="action-button jumbotron__cta" href="#how-we-work">VÍCE O NÁS</a>
         </div>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-table mdc-layout-grid__cell--span-7-desktop">
       </div>
     </div>
   </div>
