HP redesign - header layout tweeks
- blocks spacing
- background image positioning

--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -26,7 +26,7 @@ TopMonks - Software development partner for your business
   @media screen and (max-width: 479px) {
     body {
       background: url("https://res.cloudinary.com/topmonks/image/upload/w_603,dpr_auto,q_auto,f_auto/v1553097490/topmonks.com/bgnd_header_mobile.png")
-      no-repeat right calc(50% - 145px) top 50px;
+      no-repeat right calc(50% - 165px) top -105px;
       background-size: 603px auto;
       overflow-x: hidden;
     }
@@ -35,7 +35,7 @@ TopMonks - Software development partner for your business
   @media screen and (max-width: 479px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 479px) and (min--moz-device-pixel-ratio: 2), screen and (max-width: 479px) and (-o-min-device-pixel-ratio: 2/1), screen and (max-width: 479px) and (min-device-pixel-ratio: 2), screen and (max-width: 479px) and (min-resolution: 192dpi), screen and (max-width: 479px) and (min-resolution: 2dppx) {
     body {
       background: url("https://res.cloudinary.com/topmonks/image/upload/w_603,dpr_2,q_auto,f_auto/v1553097490/topmonks.com/bgnd_header_mobile.png")
-      no-repeat right calc(50% - 145px) top 50px;
+      no-repeat right calc(50% - 165px) top -105px;
       background-size: 603px auto;
       overflow-x: hidden;
     }
@@ -43,7 +43,7 @@ TopMonks - Software development partner for your business
   @media screen and (min-width: 480px) {
     body {
       background: url("https://res.cloudinary.com/topmonks/image/upload/w_919,dpr_auto,q_auto,f_auto/v1553096602/topmonks.com/bgnd_header.png")
-      no-repeat right calc(50% - 390px) top 68px;
+      no-repeat right calc(50% - 430px) top 76px;
       background-size: 919px auto;
       overflow-x: hidden;
     }
@@ -52,7 +52,7 @@ TopMonks - Software development partner for your business
   @media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
     body {
       background: url("https://res.cloudinary.com/topmonks/image/upload/w_919,dpr_2,q_auto,f_auto/v1553096602/topmonks.com/bgnd_header.png")
-      no-repeat right calc(50% - 390px) top 68px;
+      no-repeat right calc(50% - 430px) top 76px;
       background-size: 919px auto;
       overflow-x: hidden;
     }
@@ -73,15 +73,15 @@ TopMonks - Software development partner for your business
 <section class="main-info jumbotron">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-table mdc-layout-grid__cell--span-5-desktop">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <h2 class="jumbotron__title">From your idea to <br>an effective solution</h2>
         <div class="box box--lead box--mobile-only">
           <p>We are building companies, integrating infrastructure, developing apps and
-            testing software for banks, startup and blockchain projects.</p>
+            testing software for banks, startup and&nbsp;blockchain projects.</p>
           <a class="action-button jumbotron__cta" href="#how-we-work">MORE ABOUT US</a>
         </div>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-table mdc-layout-grid__cell--span-7-desktop">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
       </div>
     </div>
   </div>
