--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -17,13 +17,11 @@
 <meta property="og:url" content="https://www.topmonks.cz/">
 <meta property="og:site_name" content="TopMonks.cz">
 <link rel="stylesheet" href="/stylesheets/main.css">
-
-
 <style>
   @media screen and (max-width: 479px) {
     body {
       background: url("https://res.cloudinary.com/topmonks/image/upload/w_603,dpr_auto,q_auto,f_auto/v1553097490/topmonks.com/bgnd_header_mobile.png")
-      no-repeat right calc(50% - 145px) top 50px;
+      no-repeat right calc(50% - 165px) top -105px;
       background-size: 603px auto;
       overflow-x: hidden;
     }
@@ -32,7 +30,7 @@
   @media screen and (max-width: 479px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 479px) and (min--moz-device-pixel-ratio: 2), screen and (max-width: 479px) and (-o-min-device-pixel-ratio: 2/1), screen and (max-width: 479px) and (min-device-pixel-ratio: 2), screen and (max-width: 479px) and (min-resolution: 192dpi), screen and (max-width: 479px) and (min-resolution: 2dppx) {
     body {
       background: url("https://res.cloudinary.com/topmonks/image/upload/w_603,dpr_2,q_auto,f_auto/v1553097490/topmonks.com/bgnd_header_mobile.png")
-      no-repeat right calc(50% - 145px) top 50px;
+      no-repeat right calc(50% - 165px) top -105px;
       background-size: 603px auto;
       overflow-x: hidden;
     }
@@ -40,7 +38,7 @@
   @media screen and (min-width: 480px) {
     body {
       background: url("https://res.cloudinary.com/topmonks/image/upload/w_919,dpr_auto,q_auto,f_auto/v1553096602/topmonks.com/bgnd_header.png")
-      no-repeat right calc(50% - 390px) top 68px;
+      no-repeat right calc(50% - 430px) top 76px;
       background-size: 919px auto;
       overflow-x: hidden;
     }
@@ -49,7 +47,7 @@
   @media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
     body {
       background: url("https://res.cloudinary.com/topmonks/image/upload/w_919,dpr_2,q_auto,f_auto/v1553096602/topmonks.com/bgnd_header.png")
-      no-repeat right calc(50% - 390px) top 68px;
+      no-repeat right calc(50% - 430px) top 76px;
       background-size: 919px auto;
       overflow-x: hidden;
     }
@@ -70,7 +68,7 @@
 <section class="main-info jumbotron">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-table mdc-layout-grid__cell--span-5-desktop">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <h2 class="jumbotron__title">Od Vašeho nápadu <br>k efektivnímu řešení</h2>
         <div class="box box--lead box--mobile-only">
           <p>Budujeme firmy, integrujeme infrastrukturu, vyvíjíme aplikace a testujeme
@@ -78,7 +76,7 @@
           <a class="action-button jumbotron__cta" href="#how-we-work">VÍCE O NÁS</a>
         </div>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-table mdc-layout-grid__cell--span-7-desktop">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
       </div>
     </div>
   </div>
