--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -38,7 +38,7 @@
   @media screen and (min-width: 480px) {
     body {
       background: url("https://res.cloudinary.com/topmonks/image/upload/w_919,dpr_auto,q_auto,f_auto/v1553096602/topmonks.com/bgnd_header.png")
-      no-repeat right calc(50% - 430px) top 76px;
+      no-repeat right calc(50% - 430px) top 75px;
       background-size: 919px auto;
       overflow-x: hidden;
     }
@@ -47,7 +47,7 @@
   @media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
     body {
       background: url("https://res.cloudinary.com/topmonks/image/upload/w_919,dpr_2,q_auto,f_auto/v1553096602/topmonks.com/bgnd_header.png")
-      no-repeat right calc(50% - 430px) top 76px;
+      no-repeat right calc(50% - 430px) top 75px;
       background-size: 919px auto;
       overflow-x: hidden;
     }
@@ -87,17 +87,10 @@
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="https://www.erstegroupit.com/en/home"><img
-          src="https://res.cloudinary.com/topmonks/image/upload/v1551977559/loga/erste_logo.png"
-          alt="[logo] Erste Group"></a>
-        <a href="https://www.pricefx.eu/site/"><img
-          src="https://res.cloudinary.com/topmonks/image/upload/v1551977559/loga/pfx_logo.png"
-          alt="[logo] Pricef(x)"></a>
-        <a href="https://zonky.cz/"><img
-          src="https://res.cloudinary.com/topmonks/image/upload/v1551977559/loga/zonky_logo.png" alt="[logo] Zonky"></a>
-        <a href="https://www.adler.info/CZ/cs/Home/"> <img
-          src="https://res.cloudinary.com/topmonks/image/upload/v1551977559/loga/adler_logo.png" alt="[logo] Adler"
-        ></a>
+        <a href="https://www.erstegroupit.com/en/home">{{sprite('img_logo_erste-group')}}</a>
+        <a href="https://www.pricefx.eu/site/">{{sprite('img_logo_pricefx')}}</a>
+        <a href="https://zonky.cz/">{{sprite('img_logo_zonky')}}</a>
+        <a href="https://www.adler.info/CZ/cs/Home/">{{sprite('img_logo_adler')}}</a>
       </div>
     </div>
   </div>
