--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -92,10 +92,10 @@ TopMonks - Software development partner for your business
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="https://www.erstegroupit.com/en/home">{{sprite('img_logo_erste-group')}}</a>
-        <a href="https://www.pricefx.eu/site/">{{sprite('img_logo_pricefx')}}</a>
-        <a href="https://zonky.cz/">{{sprite('img_logo_zonky')}}</a>
-        <a href="https://www.adler.info/CZ/cs/Home/">{{sprite('img_logo_adler')}}</a>
+        <a href="https://www.erstegroupit.com/en/home">{{sprite('img_logo_erste-group', '[logo] Erste Group')}}</a>
+        <a href="https://www.pricefx.eu/site/">{{sprite('img_logo_pricefx', '[logo] Pricef(x)')}}</a>
+        <a href="https://zonky.cz/">{{sprite('img_logo_zonky', '[logo] Zonky')}}</a>
+        <a href="https://www.adler.info/CZ/cs/Home/">{{sprite('img_logo_adler', '[logo] Adler')}}</a>
       </div>
     </div>
   </div>
